fix overflow issue, show only 3km pools

--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -67,6 +67,7 @@ html, .pure-g [class *= "pure-u"] {
   margin-bottom: 1.5em;
   background-color: $bgGrey;
   color: #555;
+  overflow: hidden;
 }
 .pool-name {
   color: black;
